# py-canary

./: .coveragerc  .flake8  .pre-commit-config.yaml  MANIFEST  README.md  pylintrc  pyproject.toml  requirements_tests.txt  run_api.py  setup.cfg  setup.py  tox.ini
canary/: __init__.py  api.py  auth.py  const.py  live_stream_api.py  model.py  util.py
tests/: __init__.py  test_api.py  test_live_stream_api.py
tests/fixtures/: api_entries_70001.json  api_location_20.json  api_locations.json  api_login.json  api_login_2fa.json  api_modes.json  api_readings_80005.json  live_stream_api_login.json
