[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
log_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = [
    "tests",
    ]
markers = [
    "slow: mark test as slow (deselect with '-m \"not slow\"')",
    "current_test: marks the current coding test to run",
    "unfinished: test is currently being coded (deselect with '-m \"not unfinished\"')"
    ]

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = [
    "canary",
    "tests",
]
forced_separate = [
    "tests",
]
combine_as_imports = true
