[metadata]
name = py-canary
version = 0.5.3
author = snjoetw
author_email = snjoetw@gmail.com
description = Python API for Canary Security Camera
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/snjoetw/py-canary
project_urls =
    Bug Tracker = https://github.com/snjoetw/py-canary/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = canary
python_requires = >=3.6
install_requires =
    requests
